website/code/hash-icpp.log
BUILD COMMANDS FOR: hash.icpp

Fri Mar 31 20:06:01 PST 2006

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  hash.c++ -o hash.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc hash.c++.o -o hash.icpp_run -O3 -ip -static -unroll  
hash.c++(46): error: hash_map is not a template
      typedef hash_map<const char*, int, str_hash_compare> HM;
              ^

compilation aborted for hash.c++ (code 2)
make[3]: [hash.icpp_run] Error 2 (ignored)
rm: cannot remove `hash.c++.o': No such file or directory
rm: cannot remove `hash.o': No such file or directory
make[3]: [hash.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

hash.icpp_run %A
Error, could not exec hash.icpp_run 40000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/hash:/opt/shootout/shootout/bench/hash/tmp:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
